Refactor hltv match